@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2023 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -33,7 +33,9 @@ import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
+import org.springframework.core.ResolvableType;
 import org.springframework.core.codec.CharSequenceEncoder;
+import org.springframework.core.codec.Encoder;
 import org.springframework.core.io.buffer.DataBuffer;
 import org.springframework.core.io.buffer.DefaultDataBufferFactory;
 import org.springframework.http.MediaType;
@@ -53,7 +55,7 @@ import static org.springframework.http.MediaType.TEXT_PLAIN;
 import static org.springframework.http.MediaType.TEXT_XML;
 
 /**
- * Unit tests for {@link EncoderHttpMessageWriter}.
+ * Tests for {@link EncoderHttpMessageWriter}.
  *
  * @author Rossen Stoyanchev
  * @author Brian Clozel
@@ -188,7 +190,7 @@ class EncoderHttpMessageWriterTests {
 	void isStreamingMediaType() throws InvocationTargetException, IllegalAccessException {
 		configureEncoder(TEXT_HTML);
 		MediaType streamingMediaType = new MediaType(TEXT_PLAIN, Collections.singletonMap("streaming", "true"));
-		given(this.encoder.getStreamingMediaTypes()).willReturn(Arrays.asList(streamingMediaType));
+		given(this.encoder.getStreamingMediaTypes()).willReturn(List.of(streamingMediaType));
 
 		HttpMessageWriter<String> writer = new EncoderHttpMessageWriter<>(this.encoder);
 		Method method = ReflectionUtils.findMethod(writer.getClass(), "isStreamingMediaType", MediaType.class);
@@ -197,6 +199,30 @@ class EncoderHttpMessageWriterTests {
 		assertThat((Boolean) method.invoke(writer, streamingMediaType)).isTrue();
 		assertThat((Boolean) method.invoke(writer, new MediaType(TEXT_PLAIN, Collections.singletonMap("streaming", "false")))).isFalse();
 		assertThat((Boolean) method.invoke(writer, TEXT_HTML)).isFalse();
+	}
+
+	@Test
+	public void noContentTypeWithEmptyBody() {
+		Encoder<CharSequence> encoder = CharSequenceEncoder.textPlainOnly();
+		HttpMessageWriter<CharSequence> writer = new EncoderHttpMessageWriter<>(encoder);
+		Mono<Void> writerMono = writer.write(Mono.empty(), ResolvableType.forClass(String.class),
+				null, this.response, NO_HINTS);
+
+		StepVerifier.create(writerMono)
+				.verifyComplete();
+		assertThat(response.getHeaders().getContentType()).isNull();
+	}
+
+	@Test
+	public void zeroContentLengthWithEmptyBody() {
+		Encoder<CharSequence> encoder = CharSequenceEncoder.textPlainOnly();
+		HttpMessageWriter<CharSequence> writer = new EncoderHttpMessageWriter<>(encoder);
+		Mono<Void> writerMono = writer.write(Mono.empty(), ResolvableType.forClass(String.class),
+				null, this.response, NO_HINTS);
+
+		StepVerifier.create(writerMono)
+				.verifyComplete();
+		assertThat(this.response.getHeaders().getContentLength()).isEqualTo(0);
 	}
 
 	private void configureEncoder(MimeType... mimeTypes) {
