@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2023 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,9 +17,9 @@
 package org.springframework.web.servlet.mvc.method.annotation;
 
 import java.lang.reflect.Method;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Set;
 import java.util.function.Consumer;
 
@@ -29,10 +29,12 @@ import jakarta.validation.Valid;
 import jakarta.validation.constraints.Size;
 import jakarta.validation.executable.ExecutableValidator;
 import jakarta.validation.metadata.BeanDescriptor;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import org.springframework.context.MessageSourceResolvable;
+import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.http.MediaType;
 import org.springframework.http.converter.StringHttpMessageConverter;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
@@ -74,7 +76,7 @@ import static org.mockito.Mockito.mock;
  * </ul>
  * @author Rossen Stoyanchev
  */
-public class MethodValidationTests {
+class MethodValidationTests {
 
 	private static final Person mockPerson = mock(Person.class);
 
@@ -92,6 +94,8 @@ public class MethodValidationTests {
 
 	@BeforeEach
 	void setup() throws Exception {
+		LocaleContextHolder.setDefaultLocale(Locale.UK);
+
 		LocalValidatorFactoryBean validatorBean = new LocalValidatorFactoryBean();
 		validatorBean.afterPropertiesSet();
 		this.jakartaValidator = new InvocationCountingValidator(validatorBean);
@@ -101,7 +105,7 @@ public class MethodValidationTests {
 		this.request.setMethod("POST");
 		this.request.setContentType(MediaType.APPLICATION_FORM_URLENCODED_VALUE);
 		this.request.addHeader("Accept", "text/plain");
-		this.request.setAttribute(HandlerMapping.URI_TEMPLATE_VARIABLES_ATTRIBUTE, new HashMap<String, String>(0));
+		this.request.setAttribute(HandlerMapping.URI_TEMPLATE_VARIABLES_ATTRIBUTE, new HashMap<>(0));
 	}
 
 	private static RequestMappingHandlerAdapter initHandlerAdapter(Validator validator) {
@@ -121,27 +125,30 @@ public class MethodValidationTests {
 		return handlerAdapter;
 	}
 
+	@AfterEach
+	void reset() {
+		LocaleContextHolder.setDefaultLocale(null);
+	}
+
 
 	@Test
 	void modelAttribute() {
 		HandlerMethod hm = handlerMethod(new ValidController(), c -> c.handle(mockPerson));
 		this.request.addParameter("name", "name=Faustino1234");
 
-		MethodArgumentNotValidException ex = catchThrowableOfType(
-				() -> this.handlerAdapter.handle(this.request, this.response, hm),
-				MethodArgumentNotValidException.class);
+		MethodArgumentNotValidException ex = catchThrowableOfType(MethodArgumentNotValidException.class,
+				() -> this.handlerAdapter.handle(this.request, this.response, hm));
 
 		assertThat(this.jakartaValidator.getValidationCount()).isEqualTo(1);
 		assertThat(this.jakartaValidator.getMethodValidationCount()).as("Method validation unexpected").isEqualTo(0);
 
-		assertBeanResult(ex.getBindingResult(), "student", Collections.singletonList(
-				"""
+		assertBeanResult(ex.getBindingResult(), "student", List.of("""
 			Field error in object 'student' on field 'name': rejected value [name=Faustino1234]; \
 			codes [Size.student.name,Size.name,Size.java.lang.String,Size]; \
 			arguments [org.springframework.context.support.DefaultMessageSourceResolvable: \
 			codes [student.name,name]; arguments []; default message [name],10,1]; \
-			default message [size must be between 1 and 10]"""));
-
+			default message [size must be between 1 and 10]"""
+		));
 	}
 
 	@Test
@@ -154,8 +161,7 @@ public class MethodValidationTests {
 		assertThat(this.jakartaValidator.getValidationCount()).isEqualTo(1);
 		assertThat(this.jakartaValidator.getMethodValidationCount()).as("Method validation unexpected").isEqualTo(0);
 
-		assertThat(response.getContentAsString()).isEqualTo(
-				"""
+		assertThat(response.getContentAsString()).isEqualTo("""
 			org.springframework.validation.BeanPropertyBindingResult: 1 errors
 			Field error in object 'student' on field 'name': rejected value [name=Faustino1234]; \
 			codes [Size.student.name,Size.name,Size.java.lang.String,Size]; \
@@ -170,26 +176,24 @@ public class MethodValidationTests {
 		this.request.addParameter("name", "name=Faustino1234");
 		this.request.addHeader("myHeader", "123");
 
-		HandlerMethodValidationException ex = catchThrowableOfType(
-				() -> this.handlerAdapter.handle(this.request, this.response, hm),
-				HandlerMethodValidationException.class);
+		HandlerMethodValidationException ex = catchThrowableOfType(HandlerMethodValidationException.class,
+				() -> this.handlerAdapter.handle(this.request, this.response, hm));
 
 		assertThat(this.jakartaValidator.getValidationCount()).isEqualTo(1);
 		assertThat(this.jakartaValidator.getMethodValidationCount()).isEqualTo(1);
 
-		assertThat(ex.getAllValidationResults()).hasSize(2);
+		assertThat(ex.getParameterValidationResults()).hasSize(2);
 
-		assertBeanResult(ex.getBeanResults().get(0), "student", Collections.singletonList(
-				"""
+		assertBeanResult(ex.getBeanResults().get(0), "student", List.of("""
 			Field error in object 'student' on field 'name': rejected value [name=Faustino1234]; \
 			codes [Size.student.name,Size.name,Size.java.lang.String,Size]; \
 			arguments [org.springframework.context.support.DefaultMessageSourceResolvable: \
 			codes [student.name,name]; arguments []; default message [name],10,1]; \
-			default message [size must be between 1 and 10]"""));
+			default message [size must be between 1 and 10]"""
+		));
 
-		assertValueResult(ex.getValueResults().get(0), 2, "123", Collections.singletonList(
-				"""
-			org.springframework.context.support.DefaultMessageSourceResolvable: \
+		assertValueResult(ex.getValueResults().get(0), 2, "123", List.of("""
+			org.springframework.validation.beanvalidation.MethodValidationAdapter$ViolationMessageSourceResolvable: \
 			codes [Size.validController#handle.myHeader,Size.myHeader,Size.java.lang.String,Size]; \
 			arguments [org.springframework.context.support.DefaultMessageSourceResolvable: \
 			codes [validController#handle.myHeader,myHeader]; arguments []; default message [myHeader],10,5]; \
@@ -212,8 +216,7 @@ public class MethodValidationTests {
 		assertThat(jakartaValidator.getValidationCount()).isEqualTo(2);
 		assertThat(jakartaValidator.getMethodValidationCount()).isEqualTo(1);
 
-		assertThat(response.getContentAsString()).isEqualTo(
-				"""
+		assertThat(response.getContentAsString()).isEqualTo("""
 			org.springframework.validation.BeanPropertyBindingResult: 1 errors
 			Field error in object 'person' on field 'name': rejected value [name=Faustino1234]; \
 			codes [Size.person.name,Size.name,Size.java.lang.String,Size]; \
@@ -228,30 +231,28 @@ public class MethodValidationTests {
 		this.request.setContentType(MediaType.APPLICATION_JSON_VALUE);
 		this.request.setContent("[{\"name\":\"Faustino1234\"},{\"name\":\"Cayetana6789\"}]".getBytes(UTF_8));
 
-		HandlerMethodValidationException ex = catchThrowableOfType(
-				() -> this.handlerAdapter.handle(this.request, this.response, hm),
-				HandlerMethodValidationException.class);
+		HandlerMethodValidationException ex = catchThrowableOfType(HandlerMethodValidationException.class,
+				() -> this.handlerAdapter.handle(this.request, this.response, hm));
 
 		assertThat(this.jakartaValidator.getValidationCount()).isEqualTo(1);
 		assertThat(this.jakartaValidator.getMethodValidationCount()).isEqualTo(1);
 
-		assertThat(ex.getAllValidationResults()).hasSize(2);
+		assertThat(ex.getParameterValidationResults()).hasSize(2);
 
-		assertBeanResult(ex.getBeanResults().get(0), "personList", Collections.singletonList(
-				"""
-				Field error in object 'personList' on field 'name': rejected value [Faustino1234]; \
-				codes [Size.personList.name,Size.name,Size.java.lang.String,Size]; \
-				arguments [org.springframework.context.support.DefaultMessageSourceResolvable: \
-				codes [personList.name,name]; arguments []; default message [name],10,1]; \
-				default message [size must be between 1 and 10]"""));
+		assertBeanResult(ex.getBeanResults().get(0), "personList", List.of("""
+			Field error in object 'personList' on field 'name': rejected value [Faustino1234]; \
+			codes [Size.personList.name,Size.name,Size.java.lang.String,Size]; \
+			arguments [org.springframework.context.support.DefaultMessageSourceResolvable: \
+			codes [personList.name,name]; arguments []; default message [name],10,1]; \
+			default message [size must be between 1 and 10]"""
+		));
 
-		assertBeanResult(ex.getBeanResults().get(1), "personList", Collections.singletonList(
-				"""
-				Field error in object 'personList' on field 'name': rejected value [Cayetana6789]; \
-				codes [Size.personList.name,Size.name,Size.java.lang.String,Size]; \
-				arguments [org.springframework.context.support.DefaultMessageSourceResolvable: \
-				codes [personList.name,name]; arguments []; default message [name],10,1]; \
-				default message [size must be between 1 and 10]"""
+		assertBeanResult(ex.getBeanResults().get(1), "personList", List.of("""
+			Field error in object 'personList' on field 'name': rejected value [Cayetana6789]; \
+			codes [Size.personList.name,Size.name,Size.java.lang.String,Size]; \
+			arguments [org.springframework.context.support.DefaultMessageSourceResolvable: \
+			codes [personList.name,name]; arguments []; default message [name],10,1]; \
+			default message [size must be between 1 and 10]"""
 		));
 
 	}
@@ -267,8 +268,7 @@ public class MethodValidationTests {
 		assertThat(jakartaValidator.getValidationCount()).isEqualTo(1);
 		assertThat(jakartaValidator.getMethodValidationCount()).isEqualTo(1);
 
-		assertThat(response.getContentAsString()).isEqualTo(
-				"""
+		assertThat(response.getContentAsString()).isEqualTo("""
 			org.springframework.validation.BeanPropertyBindingResult: 2 errors
 			Field error in object 'person' on field 'name': rejected value [name=Faustino1234]; \
 			codes [TOO_LONG.person.name,TOO_LONG.name,TOO_LONG.java.lang.String,TOO_LONG]; \
@@ -289,8 +289,7 @@ public class MethodValidationTests {
 		RequestMappingHandlerAdapter springValidatorHandlerAdapter = initHandlerAdapter(new PersonValidator());
 		springValidatorHandlerAdapter.handle(this.request, this.response, hm);
 
-			assertThat(response.getContentAsString()).isEqualTo(
-				"""
+		assertThat(response.getContentAsString()).isEqualTo("""
 			org.springframework.validation.BeanPropertyBindingResult: 1 errors
 			Field error in object 'student' on field 'name': rejected value [name=Faustino1234]; \
 			codes [TOO_LONG.student.name,TOO_LONG.name,TOO_LONG.java.lang.String,TOO_LONG]; \
@@ -301,7 +300,7 @@ public class MethodValidationTests {
 	@SuppressWarnings("unchecked")
 	private static <T> HandlerMethod handlerMethod(T controller, Consumer<T> mockCallConsumer) {
 		Method method = ResolvableMethod.on((Class<T>) controller.getClass()).mockCall(mockCallConsumer).method();
-		return new HandlerMethod(controller, method);
+		return new HandlerMethod(controller, method).createWithValidateFlags();
 	}
 
 	@SuppressWarnings("SameParameterValue")
